--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "starter kit for webpack-es6",
   "main": "app.js",
   "scripts": {
-    "start": "node --use_strict server.js",
+    "start": "node --use_strict server.js && npm run go",
     "go": "npm-run-all --parallel dev-server webpack-watcher",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-dist": "webpack",
