--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dom": "15.4.2",
     "react-router": "^4.1.1",
     "react-scrollable-anchor": "^0.4.2",
-    "react-transition-group": "^1.1.1"
+    "react-transition-group": "^1.1.1",
+    "react-waypoint": "^6.0.0"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^4.0.1",
